--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">IotAgriculture</string>
+    <string name="enter_phone_number">Enter Phone Number:</string>
+    <string name="iot_agriculture">IoT Agriculture</string>
 </resources>
